rook/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rook-ceph-mgr-dashboard-external-http
  namespace: rook-ceph
spec:
  parentRefs:
  - name: eg
    namespace: default
  hostnames:
  - "ceph-dashboard.selfmade4u.de"
  rules:
  - backendRefs:
    - name: rook-ceph-mgr-dashboard
      namespace: rook-ceph
      port: 8443
